mongo-express related fixes.

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-com.demirsoft.ecommerce.config.kafka-address=192.168.8.107:9092
-spring.kafka.bootstrap-servers:192.168.8.107:9092
+com.demirsoft.ecommerce.config.kafka-address=localhost:9092
+spring.kafka.bootstrap-servers:localhost:9092
 spring.kafka.consumer.auto-offset-reset=earliest
 
 spring.data.mongodb.uri=mongodb://root:passwd@localhost:27017/ecomm?authSource=admin
