--- a/order-service/compose.yaml
+++ b/order-service/compose.yaml
@@ -50,22 +50,22 @@ services:
     networks:
       - ecomm-nw
     ports:
-      - "27017:27017"
+      - 27017:27017
     volumes:
       - mongo-data:/data/db
 
   mongo-express:
-    image: mongo-express
+    image: mongo-express:latest
     container_name: mongoexpress
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: passwd
-      ME_CONFIG_MONGODB_URL: mongodb://root:passwd@localhost:27017/ecomm?authSource=admin
+      ME_CONFIG_MONGODB_URL: "mongodb://root:passwd@mongodb:27017/ecomm?authSource=admin"
       ME_CONFIG_BASICAUTH: false
     networks:
       - ecomm-nw
     ports:
       - 28017:8081
+    depends_on:
+      - mongodb
 
   mysql:
     image: 'mysql:8.1'
