--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 spring.application.name=product-service
 server.port=8082
 
-com.demirsoft.ecommerce.config.kafka-address=192.168.8.107:9092
-spring.kafka.bootstrap-servers:192.168.8.107:9092
+ecommerce.config.kafka-address=localhost:9092
+spring.kafka.bootstrap-servers:localhost:9092
 spring.kafka.consumer.auto-offset-reset=earliest
 
+ecommerce.config.mongo-db-name=ecomm
 spring.data.mongodb.uri=mongodb://root:passwd@localhost:27017/ecomm?authSource=admin
-
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui/index.html
