--- a/order-service/compose.yaml
+++ b/order-service/compose.yaml
@@ -85,7 +85,7 @@ services:
   # kafkacat:
   #   image: confluentinc/cp-kafkacat
   #   networks:
-      - ecomm-nw
+  #    - ecomm-nw
   #   command: sleep infinity
 
 volumes:
