properties prefix changed.

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=order-service
 server.port=8083
 
-com.demirsoft.ecommerce.config.kafka-address=localhost:9092
+ecommerce.config.kafka-address=localhost:9092
 spring.kafka.bootstrap-servers:localhost:9092
 spring.kafka.consumer.auto-offset-reset=earliest
 
