--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -109,12 +109,24 @@
 
 	</dependencies>
 
+
+	<distributionManagement>
+       <repository>
+         <id>internal.repo</id>
+         <name>Internal Repo</name>
+         <url>file:///${basedir}/images</url>
+       </repository>
+   </distributionManagement>
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<image>
+							<name>ecommerce/${project.artifactId}:${project.version}</name>
+					</image>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
