--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,10 +1,5 @@
 spring.application.name=auth-service
-logging.level.com.demirsoft==debug
+logging.level.com.demirsoft=debug
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.datasource.username=root
-spring.datasource.password=passwd
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+
+spring.profiles.active=dev
